postgres-deployment-ephemeral.yaml
  apiVersion: extensions/v1beta1
  #apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: quay-enterprise-quay-postgresql
  spec:
    replicas: 1 
    template:
      metadata:
        labels:
          app: quay-enterprise-quay-postgresql
      spec:
        containers:
          - name: quay-enterprise-quay-postgresql
            image: registry.access.redhat.com/rhscl/postgresql-10-rhel7:1-35
            imagePullPolicy: "IfNotPresent"
            ports:
              - containerPort: 5432
