postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-enterprise-quay-postgresql
  labels:
    app: quay-enterprise-quay-postgresql
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: quay-enterprise-quay-postgresql
