quay-enterprise-app-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: quay-enterprise-quay
  namespace: quay-enterprise
spec:
  to:
    kind: Service
    name: quay-enterprise-quay
  tls:
    termination: passthrough
    # trying this
    insecureEdgeTerminationPolicy: Redirect
